Configured exclusions & template file suffix

--- a/.github/workflows/template-test.yml
+++ b/.github/workflows/template-test.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    name: Lint Code
+    name: Validate Template
 
     steps:
       - name: Checkout Code
