--- a/project/.github/workflows/reviewdog.yaml
+++ b/project/.github/workflows/reviewdog.yaml
@@ -2,6 +2,10 @@ name: ReviewDog
 
 on: [pull_request]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   misspell:
     name: misspell
@@ -14,6 +18,7 @@ jobs:
       - name: Misspell
         uses: reviewdog/action-misspell@9daa94af4357dddb6fd3775de806bc0a8e98d3e4 # v1.26.3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           level: warning
           locale: "US"
@@ -24,5 +29,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-actionlint@a5524e1c19e62881d79c1f1b9b6f09f16356e281 # v1.65.2
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           level: warning
